--- a/index.css
+++ b/index.css
@@ -1,23 +1,30 @@
+
+
 body {
   background-color: black;
   color: white;
   width: 100%;
+  height: 100%;
   align-items: center;
   display: flex;
   flex-direction: column;
   padding-top: 60px;
 }
-
+.portofolio-body {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 0px 2.0em;
+}
 
 .portofolio-header{
   font-family: Courgette, cursive;
-  margin: 20px auto;
+  margin: auto;
   padding-top: 170px;
   max-width: 700px;
   align-items: center;
   text-align: center;
   font-size: 1.5rem;
-
 }
 
 .links {
@@ -29,10 +36,31 @@ body {
   font-size: 0.3rem;
   margin-bottom: 100px;
 }
+.word{
+   display: absolute;
+   top: 0px;
+   left: 0px;
+   min-height: 1em;
+   padding-left: 150px;
 
-.myWord {
-  border: 2px solid white;
-  margin: 0;
+}
+
+.word .cursor{
+  display:inline-block;
+  min-width:1px;
+  background:#FFF;
+  margin-left:-0.5em;
+  margin-top:-0.1em;
+  height:1.3em;
+  vertical-align: middle;
+  animation: blinkCursor 1s infinite;
+}
+
+@keyframes blinkCursor{
+   0% { opacity:1; }
+   80%{ opacity:1; }
+   80.1%{ opacity:0; }
+   100%{ opacity:0; }
 }
 
 a:link {
@@ -58,6 +86,7 @@ a:visited{
 footer {
   padding-top: 150px;
   display: block;
+
 }
 
 a.fo-github:hover {
@@ -86,4 +115,33 @@ a.fo-mail:hover{
 
 a.fo-codepen:hover{
   color: #696969;
+}
+
+#fo-links {
+  margin: auto;
+}
+footer#connect {
+  background-color: black;
+  color: #ffffff;
+  position: fixed;
+  padding: 0.5rem;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+ul {
+
+}
+.mdl-mini-footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.mdl-mini-footer__link_list {
+  display: flex;
+  flex-flow: row nowrap;
+  list-style: none;
+  padding: 0;
 }
