--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: black;
   color: white;
@@ -33,9 +31,24 @@ body {
   text-decoration: underline;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-size: 0.5em;
+  font-size: 0.7rem;
   margin-bottom: 100px;
 }
+
+
+a {
+  color: white;
+}
+
+#link-about:hover {
+  color: #696969;
+  font-size: 0.9rem;
+  -webkit-transform : scale(1.1);
+  -webkit-transition-duration: 0.7s;
+  -moz-transition-duration: 0.7s;
+  -o-transition-duration: 0.7;
+}
+
 .word{
    display: absolute;
    top: 0px;
@@ -61,19 +74,24 @@ body {
    100%{ opacity:0; }
 }
 
-a:link {
+.fa:hover {
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -webkit-transition-duration: 0.7s;
+  -moz-transition-duration: 0.7s;
+  -o-transition-duration: 0.7;
+}
+
+.fa:active {
   color: white;
 }
 
-a:hover {
-  color: #B0C4DE;
-}
-
-a:active{
+.fa:visited {
   color: white;
 }
 
-a:visited{
+.fa:link{
   color: white;
 }
 
@@ -117,11 +135,11 @@ a:visited{
   color: white;
 }
 
-.fa-mail:hover{
+.fa-envelope-o:hover{
   color: #696969;
 }
 
-.fa-mail:visited {
+.fa-envelope-o:visited {
   color: white;
 }
 
@@ -131,6 +149,14 @@ a:visited{
 }
 
 .fa-codepen:visited {
+  color: white;
+}
+
+.fa-camera-retro:hover {
+  color: #696969;
+}
+
+.fa-camera-retro:visited{
   color: white;
 }
 
@@ -166,10 +192,60 @@ footer#connect {
 
 #slogan  {
   padding-bottom: 10px;
-  font-size: 0.5em;
-  font-family:
+  font-size: 1em;
+  font-family: 'Bellefair', serif;
+  letter-spacing: 4px;
 }
 
 #about {
   font-size: 1rem;
+  font-family: 'Quicksand';
+}
+
+img {
+    width: 30%;
+    float: left;
+    margin: 1.66%;
+}
+
+.gallery {
+    font-family: Courgette, cursive;
+    text-align: center;
+    margin-left: 1.66%;
+    font-size: 1.2rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    border-bottom: 2px solid #f1f1f1;
+    width: 65%;
+    padding-bottom: 20px;
+    letter-spacing: 5px;
+}
+
+nav {
+  font-family: 'Quicksand', serif;
+  margin-top: -40px;
+  letter-spacing: 3px;
+  font-size: 1rem;
+  color: white;
+}
+
+.gallery-about:hover{
+  color: #696969;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -webkit-transition-duration: 0.7s;
+  -moz-transition-duration: 0.7s;
+  -o-transition-duration: 0.7;
+  font-size: 1.1em;
+}
+.gallery-home:hover{
+  color: #696969;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -webkit-transition-duration: 0.7s;
+  -moz-transition-duration: 0.7s;
+  -o-transition-duration: 0.7;
+  font-size: 1.1em;
 }
